--- a/happy-teeth-appointment-frontend/src/index.css
+++ b/happy-teeth-appointment-frontend/src/index.css
@@ -1,10 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800');
 
-* {
-  box-sizing: border-box;
-}
 body {
-  background: #1C8EF9 !important;
+  background: #f8f9fa !important;
   min-height: 100vh;
   display: flex;
   font-weight: 400;
