Added menu, dashboard and login for customers

--- a/happy-teeth-appointment-frontend/src/components/doctors/doctor-menu.css
+++ b/happy-teeth-appointment-frontend/src/components/doctors/doctor-menu.css
@@ -1,9 +1,8 @@
 /*
     DEMO STYLE
 */
+
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-
-
 body {
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
@@ -17,7 +16,9 @@ p {
     color: #999;
 }
 
-a, a:hover, a:focus {
+a,
+a:hover,
+a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
@@ -45,6 +46,7 @@ a, a:hover, a:focus {
     margin: 40px 0;
 }
 
+
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
@@ -56,7 +58,6 @@ a, a:hover, a:focus {
     perspective: 1500px;
 }
 
-
 #sidebar {
     border: 1px solid #f0f0f0;
     background: #ffffff;
@@ -65,24 +66,23 @@ a, a:hover, a:focus {
     transform-origin: bottom left;
 }
 
-.doctor-name {
+.common-name {
     color: #272b41;
     font-size: 0.9375rem;
 }
 
-.doctor-details h5 {
+.common-details h5 {
     color: #a6a6a6;
     font-size: 13px;
-} 
+}
 
-.doctor-img {
+.common-img {
     width: 120px;
     height: 120px;
     border-radius: 50%;
 }
 
-.doctor-profile {
-    
+.common-profile {
     display: inline-block;
     margin: 0 0 15px;
     width: auto;
@@ -111,23 +111,22 @@ a, a:hover, a:focus {
     padding: 10px;
 }
 
-
-
 #sidebar ul li a {
     padding: 26px 20px;
     font-size: 1.1em;
     display: block;
 }
+
 #sidebar ul li a:hover {
     color: #7386D5;
     background: #fff;
 }
 
-#sidebar ul li.active > a, a[aria-expanded="true"] {
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
     color: #fff;
     background: #6d7fcc;
 }
-
 
 a[data-toggle="collapse"] {
     position: relative;
@@ -164,16 +163,17 @@ a.download {
     color: #7386D5;
 }
 
-a.article, a.article:hover {
+a.article,
+a.article:hover {
     background: #6d7fcc !important;
     color: #fff !important;
 }
 
 
-
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
+
 @media (max-width: 768px) {
     #sidebar {
         margin-left: -250px;
@@ -202,5 +202,4 @@ a.article, a.article:hover {
     #sidebarCollapse.active span:last-of-type {
         transform: rotate(-45deg) translate(1px, -1px);
     }
-
 }
